# mental-disorder-diagnosis

./: FUTURE_IDEAS.md  LICENSE  README.md  compare_datasets.ipynb  data_analysis.ipynb  data_preprocess.ipynb  model_creation.py  model_eval.ipynb  model_training.ipynb  pyproject.toml  train_KNN.ipynb  train_logistic_regression.ipynb  train_random_forest.ipynb
dataset/: dataset.csv  dataset_full.csv  test.csv  test_full.csv  train.csv
fastmlapi_server/: model_server.py
model_params/: knn.json  logistic_regression.json  random_forest.json
model_server/: frontend.py  model_server.py
src/: compare_datasets.ipynb  data_preprocess.ipynb  final_model_create.py  model_creation.py  model_eval.ipynb  train_KNN.ipynb  train_logistic_regression.ipynb  train_random_forest.ipynb
